--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
         </div>
     </div>
 
-    <script src="./public/env-config.js"></script>
+    <script src="env-config.js"></script>
     <script>
         // Google API initialization functions - must be defined before script tags
         function gapiLoaded() {
@@ -411,7 +411,8 @@
             "Саврасова Вероника Олександровна",
             "Сариев Ернур Ерсинович",
             "Ташимов Сабыр Нуржанович",
-            "Туганбаева Асель Айбековна"
+            "Туганбаева Асель Айбековна",
+            "Сапа Татьяна Ивановна"
         ];
 
         let ratings = [0, 0, 0, 0, 0];
@@ -1330,6 +1331,11 @@
                     statusDiv.innerHTML = `
                         <div class="alert alert-success">
                             ✅ Загрузка завершена!<br>
+                            <strong>Успешно загружено:</strong> ${loadedCount} оценок из папки Google Drive (ID: ${FOLDER_ID})<br>
+                            ${errorCount > 0 ? `<strong>Ошибок:</strong> ${errorCount}<br>` : ''}
+                            <br>
+                            <small>Поиск выполнен ТОЛЬКО в указанной папке, исключая корзину и другие папки</small><br>
+                            Перейдите на вкладку <strong>"Просмотр"</strong> для просмотра таблицы
                         </div>
                     `;
                     
