--- a/index.html
+++ b/index.html
@@ -405,6 +405,7 @@
             "Қасым Хангелді Мақсатұлы",
             "Левощенко Ева Андреевна",
             "Ній Милана Александровна",
+            "Нурбергенова Диляра",
             "Османова Эстэль Эмильевна",
             "Пономарева Екатерина Максимовна",
             "Попов Роман Витальевич",
